k8s/frontend/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-green
  labels:
    app: todoapp
    component: frontend
    color: green
spec:
  replicas: 0
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        component: frontend
        color: green
        version: "1.0.0"
    spec:
      containers:
      - name: frontend
        image: todoacr2086.azurecr.io/todo-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
